--- a/templates/records/action_task_complete.html
+++ b/templates/records/action_task_complete.html
@@ -1,6 +1,6 @@
 {% extends "records/base.html" %}
 {% block activity_item %}
-    <a href="{% url profile record.user.id %}">{{ record.user }}</a> completed 
+    <a href="{% url profile record.user.id %}">{{ record.user.get_full_name }}</a> completed 
     <a href="{% url action_detail content_object.action.slug %}">{{ content_object.name }}</a> 
-    on {{ record.created }} {% if record.points %}for {{ record.points }} points{% endif %}
+    on {{ record.created|date:"M j, Y" }} {% if record.points %}for {{ record.points }} points{% endif %}
 {% endblock %}
