--- a/templates/records/comment_mark_useful.html
+++ b/templates/records/comment_mark_useful.html
@@ -1,5 +1,5 @@
 {% extends "records/base.html" %}
 {% block activity_item %}
-    <a href="{% url profile record.user.id %}">{{ record.user }}</a> marked a comment as useful
-    on {{ record.created }} {% if record.points %}for {{ record.points }} points{% endif %}
+    <a href="{% url profile record.user.id %}">{{ record.user.get_full_name }}</a> marked a comment as useful
+    on {{ record.created|date:"M j, Y" }} {% if record.points %}for {{ record.points }} points{% endif %}
 {% endblock %}
