--- a/templates/records/group_create.html
+++ b/templates/records/group_create.html
@@ -1,6 +1,6 @@
 {% extends "records/base.html" %}
 {% block activity_item %}
     <a href="{% url profile record.user.id %}">{{ record.user.get_full_name }}</a> created the a new group, 
-    <a href="{% url group_detail content_object.slug %}">{{ content_object.name }}</a> 
+    <a href="{{ content_object.get_absolute_url }}">{{ content_object.name }}</a> 
     on {{ record.created|date:"M j, Y" }} {% if record.points %}for {{ record.points }} points{% endif %}
 {% endblock %}
