added a generic atom/rss icon and changed the blog rss feed to atom

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -292,6 +292,8 @@ acronym {
 
 .spacer { clear: both; }
 
+.atom_link { margin-left: 5px; }
+
 /* Action Detail page */
 .action_detail_task_container {
     position:relative;
