--- a/templates/blog/category_detail.html
+++ b/templates/blog/category_detail.html
@@ -25,5 +25,5 @@
 		{% endfor %}
 	</div>
 
-	<a href="{% url feed "blog" %}">follow us</a>
+	<a href="{% url blog_feed %}">follow us</a>
 {% endblock %}
