removed the group functionality from rah and placed it in its own app [completed: 137]

--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div id="group_header" class="group_section">
-        {% include "rah/_group_header.html" %}
+        {% include "groups/_group_header.html" %}
     </div>
     
     <div id="group_info" class="group_section">
