--- a/static/css/style.css
+++ b/static/css/style.css
@@ -427,6 +427,15 @@ th.header {
 th.headerSortUp, th.headerSortDown { 
     background-color: #3399FF; 
 }
+
+.search_title { margin-top: 30px; }
+/* @end */
+
+/* @group Search Widget */
+.search_widget .search_results { border: 2px solid #515151; overflow: auto; width: 200px; height: 250px; margin-top: 5px; padding: 5px; }
+
+.search_widget li { list-style: none; display: block; margin-bottom: 10px; }
+
 /* @end */
 
 /* Activity Stream */
