added safe tag filters to email content so plain text emails aren't rendered with escaped characters [completed: 134]

--- a/templates/rah/invite_friend_email.html
+++ b/templates/rah/invite_friend_email.html
@@ -1,8 +1,9 @@
+
 Hello, 
 
-{{ from_user }} invited you to repowerathome.com. 
+{{ from_user|safe }} invited you to repowerathome.com. 
 
-{% if note %}Note: {{ note }}{% endif %}
+{% if note %}Note: {{ note|safe }}{% endif %}
 
 Regards,
 The Repower@Home team
