--- a/templates/rah/feedback_email.html
+++ b/templates/rah/feedback_email.html
@@ -1,6 +1,6 @@
-<b>User: </b>{% if user.is_authenticated %}{{user}}{% else %}Anonymous{% endif %} <br/>
+<b>User: </b>{% if user.is_authenticated %}{{user|safe}}{% else %}Anonymous{% endif %} <br/>
 <b>URL: </b>{{feedback.url}} <br/>
 <b>Beta Group: </b>{{feedback.beta_group}} <br/>
 <h3>Comment</h3>
-{{feedback.comment|linebreaks}}
+{{feedback.comment|safe|linebreaks}}
 
