--- a/templates/rah/house_party_email.html
+++ b/templates/rah/house_party_email.html
@@ -1,3 +1,3 @@
-{{ name }} ({{ email }}) is interested in hosting a house party.  
+{{ name|safe }} ({{ email }}) is interested in hosting a house party.
 
 Please give them a call back in the {{ call_time }} at {{ phone_number }}.
