removed the ActionCat model, now we are tagging actions so more than one tag can be applied to an action [completed: 111]

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -438,6 +438,12 @@ th.headerSortUp, th.headerSortDown {
 
 /* @end */
 
+/* @group Tags */
+.tag_cloud { list-style: none; }
+
+.tag { padding: 2px; background-color: #BCBCBC; font-size: 0.7em; padding: 2px 4px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }
+/* @end */
+
 /* Activity Stream */
 .activity_item{ margin-bottom:10px;}
 
