redesigned the groups app; geo groups are now saved first class django models as they are saved to the database just like any other group. still need to write a few more testcases [completed: 138]

--- a/groups/templates/groups/_group_header.html
+++ b/groups/templates/groups/_group_header.html
@@ -3,6 +3,13 @@
     <a class="group_leave" href="{% url group_leave group.id %}">Leave Group</a>
 {% endif %}
 <h1><a href="{{ group.get_absolute_url }}">{{ group.name }}</a></h1>
+{% for parent in group.parents %}
+    <span class="group_parent"><a href="{{ parent.get_absolute_url }}">{{ parent.name }}</a>
+        {% if not forloop.last %}
+            >
+        {% endif %}
+    </span>
+{% endfor %}
 <p class="group_description">{{ group.description }}</p>
 <div class="membership_type">
     Group Type: {% if group.is_public %}Public{% else %}Private{% endif %}
