--- a/groups/templates/groups/_group_search_result.html
+++ b/groups/templates/groups/_group_search_result.html
@@ -1,3 +1,10 @@
 <img class="group_image" src="{{ MEDIA_URL }}{{ object.safe_image }}" alt="group image" height="30" width="30" />
-<h4><a href="{{ object.get_absolute_url }}">{{ object.name }}</a></h4>
+<h6><a href="{{ object.get_absolute_url }}">{{ object.name }}</a></h6>
+{% for parent in object.parents %}
+    <span class="group_parent"><a href="{{ parent.get_absolute_url }}">{{ parent.name }}</a>
+        {% if not forloop.last %}
+            >
+        {% endif %}
+    </span>
+{% endfor %}
 <br class="spacer" />
