--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -48,10 +48,13 @@
 	{% if not is_others_profile %}
         {% include 'rah/_magnify.html' %}
 	{% endif %}
-	{% if my_groups %}
+	{% if my_groups or my_geo_groups %}
 	    <h2>Groups</h2>
 	    <p>
 	    {% for group in my_groups %}
+	        <a href="{{ group.get_absolute_url }}">{{ group.name }}</a><br />
+	    {% endfor %}
+	    {% for group in my_geo_groups %}
 	        <a href="{{ group.get_absolute_url }}">{{ group.name }}</a><br />
 	    {% endfor %}
 	    </p>
