added group management functionalities, which includes the new group edit page. [completed: 132, 133, 124]

--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -27,7 +27,7 @@
                 <h2>Top Members</h2>
                 <ol>
                 {% for user in top_members %}
-                    <li><a href="{% url profile user.id %}">{{ user }}</a> ({{ user.get_profile.total_points }})</li>
+                    <li><a href="{% url profile user.id %}">{{ user.get_full_name }}</a> ({{ user.get_profile.total_points }})</li>
                 {% endfor %}
                 </ol>
             {% endif %}
@@ -50,7 +50,7 @@
             <tbody>
                 {% for user in top_members %}
                     <tr>
-                        <td>{{ user }}</td>
+                        <td>{{ user.get_full_name }}</td>
                         <td>{{ user.actions_committed }}</td>
                         <td>{{ user.actions_completed }}</td>
                         <td>{{ user.get_profile.total_points }}</td>
