--- a/groups/templates/groups/_group_header.html
+++ b/groups/templates/groups/_group_header.html
@@ -1,6 +1,9 @@
 <img class="group_image" src="{{ MEDIA_URL }}{{ group.safe_image }}" alt="group image" height="75" width="75" />
+{% if is_manager %}
+    <span class="group_action">| <a href="{% url group_edit group.slug %}">Edit Group</a></span>
+{% endif %}
 {% if group.is_joinable and is_member %}
-    <a class="group_leave" href="{% url group_leave group.id %}">Leave Group</a>
+    <a class="group_action" href="{% url group_leave group.id %}">Leave Group</a>
 {% endif %}
 <h1><a href="{{ group.get_absolute_url }}">{{ group.name }}</a></h1>
 {% for parent in group.parents %}
