--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -1,19 +1,7 @@
 {% extends "rah/base.html" %}
 {% block content %}
-    <form id="group_create_form" action="" method="post" enctype="multipart/form-data">
-		{% for field in form %}
-		    <div class="form_row">
-    			<div>{{ field.label_tag }}</div>
-    			<div>
-        			{% if field.name == "slug" %}<span>http://{{ site }}/</span>{% endif %}
-                    {{ field }}
-    				{% for error in field.errors %}
-    				    <span class="error">{{ error|escape }}</span>
-    				{% endfor %}
-    			</div>
-    			<div class="help_text">{{ field.help_text }}</div>
-			</div>
-		{% endfor %}
+    <form id="group_form" action="" method="post" enctype="multipart/form-data">
+        {% include "groups/_group_form.html" %}
 		<p><input type="submit" value="Create Group"></input></p>
 		{% csrf_token %}
 	</form>
