--- a/templates/rah/_action_nugget.html
+++ b/templates/rah/_action_nugget.html
@@ -13,7 +13,7 @@
     			<p>
     				<input type='checkbox' name='task_completed' 
     				{% if actiontask.completed %}checked='checked'{% endif %} 
-    				{% if is_others_profile %}disabled='disabled' {% endif %}/>
+    				{% if not user.is_authenticated or is_others_profile %}disabled='disabled' {% endif %}/>
     				{{ actiontask.sequence }}) 
     				{{ actiontask.name }}
     				({{ actiontask.points }} points)
