Committing Invite app. Replaces functionality of old "invite a fried" feature. todo:     -Give points when invites is accepted     -Configure group app to use invite app Updated jquery 1.4.1 to 1.4.2 Updated form and validate jquery plugins

--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -102,5 +102,6 @@
             {% endfor %}
         </ul>
     {% endif %}
+    {% include "_invite_form.html" %}
 {% endblock %}
 {% block js %}page_group_detail{% endblock %}
