--- a/templates/rah/_magnify.html
+++ b/templates/rah/_magnify.html
@@ -1,7 +1,7 @@
 <h2>Magnify Your Impact</h2>
 <p>
     <a href='{% url rah.views.house_party %}' id='house_party_link'>Host a house party</a><br/>
-    <a href='{% url rah.views.invite_friend %}' id='invite_friend_link'>Invite a friend</a><br/>
+    <a href='{% url invite_form_handler %}' id='invite_friend_link'>Invite a friend</a><br/>
     <a href='{% url twitter_oauth_post_status %}' class='twitter_status'>Share on twitter</a><br/>
     <a href='{% url group_create %}'>Create a group</a>
 </p>
