--- a/templates/comments/_comment_list.html
+++ b/templates/comments/_comment_list.html
@@ -1,12 +1,16 @@
 {% load comments %}
 {% load ratings %}
+{% load flags %}
 
 {% get_comment_list for object as comments %}
 {% if comments %}
 	<h2>Comments</h2>
 	{% for comment in comments %}
 		<div class="comment">
-			{{ comment.comment|linebreaks }}
+			{{ comment.comment }}
+			{% if user.is_authenticated %}
+			    {% get_flag_form for comment %}
+			{% endif %}
 			<p class="author">
 				-- Posted by {% safe_user_link comment.user %} on {{ comment.submit_date|date:"F j, Y" }}
 			</p>
