--- a/templates/rah/_action_nugget.html
+++ b/templates/rah/_action_nugget.html
@@ -1,24 +1,24 @@
 <div class='action_nugget'>
-	<span class='total_points'>{{ action.total_points }} Points</span>
-	<a class='title' href='{% url rah.views.action_detail action.slug %}'>{{ action.name }}</a>
-	<span class='tag_list'>
-	    {% for tag in action.tags %}
-	        <a class="tag" href="{% url action_tag tag %}">{{ tag.name|deslug }}</a>
-	    {% endfor %}
-	</span>
-	<div class='content'>{{ action.content|safe|linebreaks }} (<a href='{% url rah.views.action_detail action.slug %}' class='tasks_link'>toggle steps</a>)</div>
+    <span class='total_points'>{{ action.total_points }} Points</span>
+    <a class='title' href='{% url rah.views.action_detail action.slug %}'>{{ action.name }}</a>
+    <span class='tag_list'>
+        {% for tag in action.tags %}
+            <a class="tag" href="{% url action_tag tag %}">{{ tag.name|deslug }}</a>
+        {% endfor %}
+    </span>
+    <div class='content'>{{ action.content|safe|linebreaks }} (<a href='{% url rah.views.action_detail action.slug %}' class='tasks_link'>show list</a>)</div>
     <div class='task_list'>
-    	{% for actiontask in action.actiontasks %}
-    		<form action="{% url rah.views.action_task actiontask.id %}" class="action_task_submitter" method='post'>
-    			<p>
-    				<input type='checkbox' name='task_completed' 
-    				{% if actiontask.completed %}checked='checked'{% endif %} 
-    				{% if not user.is_authenticated or is_others_profile %}disabled='disabled' {% endif %}/>
-    				{{ actiontask.sequence }}) 
-    				{{ actiontask.name }}
-    				({{ actiontask.points }} points)
-    			</p>
-    		</form>
-    	{% endfor %}
+        {% for actiontask in action.actiontasks %}
+            <form action="{% url rah.views.action_task actiontask.id %}" class="action_task_submitter" method='post'>
+                <p>
+                    <input type='checkbox' name='task_completed' 
+                    {% if actiontask.completed %}checked='checked'{% endif %} 
+                    {% if not user.is_authenticated or is_others_profile %}disabled='disabled' {% endif %}/>
+                    {{ actiontask.sequence }}) 
+                    {{ actiontask.name }}
+                    ({{ actiontask.points }} points)
+                </p>
+            </form>
+        {% endfor %}
     </div>
 </div>
