--- a/templates/rah/_chart_tooltip.html
+++ b/templates/rah/_chart_tooltip.html
@@ -1,3 +1,5 @@
+{% load records %}
+
 {% for record in records %}
-    <b>{{ record.render }}</b><br/>
+    <b>{% render_record record %}</b><br/>
 {% endfor %}
