--- a/templates/records/comment_create.html
+++ b/templates/records/comment_create.html
@@ -1,6 +1,6 @@
 {% extends "records/base.html" %}
 {% block activity_item %}
-    <a href="{% url profile record.user.id %}">{{ record.user.get_full_name }}</a> commented on  
+    {% safe_user_link record.user %} commented on  
     <a href="{% url action_detail content_object.action.slug %}">{{ content_object.name }}</a> 
-    on {{ record.created|date:"M j, Y" }} {% if record.points %}for {{ record.points }} points{% endif %}
+    on {{ record.created|date:"M j, Y" }}{% if record.points %} (+{{ record.points }} points){% endif %}
 {% endblock %}
