--- a/templates/records/mag_invite_friend.html
+++ b/templates/records/mag_invite_friend.html
@@ -1,5 +1,6 @@
 {% extends "records/base.html" %}
+
 {% block activity_item %}
-    <a href="{% url profile record.user.id %}">{{ record.user.get_full_name }}</a> invited a friend to join Repower@Home 
-    on {{ record.created|date:"M j, Y" }}{% if record.points %} for {{ record.points }} points{% endif %}
+    {% safe_user_link record.user %} invited a friend to join Repower@Home 
+    on {{ record.created|date:"M j, Y" }}{% if record.points %} (+{{ record.points }} points){% endif %}
 {% endblock %}
