added points information to the magnify your impact links.  this was done via creating a template tag that can look up activities based on a slug [completed: 168]

--- a/templates/rah/_magnify.html
+++ b/templates/rah/_magnify.html
@@ -1,9 +1,13 @@
 <h2>Magnify Your Impact</h2>
 <p>
-    <a href='{% url rah.views.house_party %}' id='house_party_link'>Host a house party</a><br/>
-    <a href='{% url invite_form_handler %}' id='invite_friend_link'>Invite a friend</a><br/>
-    <a href='{% url twitter_oauth_post_status %}' class='twitter_status'>Share on twitter</a><br/>
-    <a href='{% url group_create %}'>Create a group</a>
+    {% activity_by_slug mag_request_party_host_info as house_party_act %}
+    <a href='{% url house_party %}' id='house_party_link'>Host a house party</a> (+{{ house_party_act.points }} points)<br/>
+    {% activity_by_slug mag_invite_friend as invite_friend_act %}
+    <a href='{% url invite_form_handler %}' id='invite_friend_link'>Invite a friend</a> (+{{ invite_friend_act.points }} points)<br/>
+    {% activity_by_slug mag_tweet as tweet_act %}
+    <a href='{% url twitter_oauth_post_status %}' class='twitter_status'>Share on twitter</a> (+ {{ tweet_act.points }} points)<br/>
+    {% activity_by_slug group_create as group_create_act %}
+    <a href='{% url group_create %}'>Create a group</a> (+ {{ group_create_act.points }} points)
 </p>
 <div id='house_party_dialog'>
     <form action="{% url rah.views.house_party %}" method="post" id="house_party_form">
