changed group description message per Jill's advice

--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -20,7 +20,7 @@
 {% endblock %}
 {% block minorcol %}
     <h2>About Groups</h2>
-    <p class="group_description">This text should describe some features of groups and how they can be useful to our users.</p>
+    <p class="group_description">Groups help you share your achievements and see what your friends are doing. You can also use groups to organize energy efficiency campaigns and competitions in your neighborhood, school, or community. Search below to find a group, or start your own.</p>
     <a href="{% url group_create %}">Create a Group</a>
     <h3 class="search_title">Find a Group</h3>
     {% search_widget group_search %}
